# YunCeX

./: .env example  .gitignore  README.md  agent_prompt.py  agent_read_protocol.md  checkpoint_manager.py  data_quality_agent.py  data_quality_tools.py  main.py  main_kaggle.py  memory_manager.py  policy.py  project_config.py  project_target.md  pyproject.toml  requirements.txt  run_kernel_skill.py  test_deepseek.py  tools.py
.claude/: settings.local.json
config/: policy.yaml
docs/: kaggle_skill_system_技术文档.md
hello_agents-1.0.0.dist-info/: METADATA  RECORD
hello_agents/agents/: __init__.py  factory.py  kernel_skill_agent.py  react_agent.py  simple_agent.py
hello_agents/core/: config.py  llm_adapters.py
kaggle_knowledge/: README.md  config.json  download_kernels.py  get_leaderboard.py  kaggle_exporter.py  main.py  search_competitions.py  utils.py
kaggle_knowledge/docs/: kaggle_skill_system_技术文档.md  kernel_to_skill.md  优先.md
kaggle_knowledge/kernel_processor/: __init__.py  notebook_parser.py  skill_extractor.py  skill_library.py
kaggle_knowledge/output/: competitions_Hull-Tactical-Market-Prediction.csv  competitions_data science.csv  competitions_emotion.csv  competitions_machine learning.csv  competitions_nlp.csv  competitions_object detection.csv  competitions_object.csv  competitions_titanic.csv  leaderboard_10-601-fall-2014-project-object-recognition.csv  leaderboard_ai-mathematical-olympiad-progress-prize-2.csv  leaderboard_aia-hands-on-bert.csv  (+54 more)
tool-output/: tool_20260505_135648_333829_read_file.json  tool_20260505_184131_804622_read_file.json
(+365 files in other folders)
